--- a/game.html
+++ b/game.html
@@ -5,7 +5,7 @@
 	<title>Drive Bet - game</title>
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
-	<link rel="stylesheet" href="css/style.min.css?_v=20220421134306">
+	<link rel="stylesheet" href="css/style.min.css?_v=20220421164453">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
@@ -102,7 +102,7 @@
 					</div>
 					<a href="index.html" class="catgame__button-back button-back item-info"></a>
 				</div>
-				<div class="catgame__hero"></div>
+				<div class="catgame__hero _start-anim"></div>
 				<div class="catgame__bet-box">
 					<div class="catgame__bets bets">
 						<div data-bet="10" class="bets__bet bets__bet_cat button _active">
@@ -148,7 +148,7 @@
 			</div>
 		</div>
 	</div>
-	<script src="js/app.min.js?_v=20220421134306"></script>
+	<script src="js/app.min.js?_v=20220421164453"></script>
 </body>
 
 </html>
