--- a/mini-game.html
+++ b/mini-game.html
@@ -5,7 +5,7 @@
 	<title>Drive Bet - mini-game</title>
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
-	<link rel="stylesheet" href="css/style.min.css?_v=20220421134306">
+	<link rel="stylesheet" href="css/style.min.css?_v=20220421164453">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
@@ -96,13 +96,13 @@
 				<div class="game__item">
 					<div class="game__history">
 						<h2 class="game__title">History</h2>
-						<div class="game__block">
-							<picture><source srcset="img/mini-game/coin-head.webp" type="image/webp"><img src="img/mini-game/coin-head.png" alt="Icon"></picture>
+						<div class="game__block game__block_head">
+							<picture><source srcset="img/mini-game/coin-head.webp" type="image/webp"><img src="img/mini-game/coin-head.png" alt="Icon" class="icon-head"></picture>
 							<h3 class="game__sub-title">head</h3>
 							<h4 class="game__sub-count game__sub-count_head">0</h4>
 						</div>
-						<div class="game__block">
-							<picture><source srcset="img/mini-game/coin-tail.webp" type="image/webp"><img src="img/mini-game/coin-tail.png" alt="Icon"></picture>
+						<div class="game__block game__block_tail">
+							<picture><source srcset="img/mini-game/coin-tail.webp" type="image/webp"><img src="img/mini-game/coin-tail.png" alt="Icon" class="icon-tail"></picture>
 							<h3 class="game__sub-title">tail</h3>
 							<h4 class="game__sub-count game__sub-count_tail">0</h4>
 						</div>
@@ -180,7 +180,7 @@
 			</div>
 		</div>
 	</div>
-	<script src="js/app.min.js?_v=20220421134306"></script>
+	<script src="js/app.min.js?_v=20220421164453"></script>
 </body>
 
 </html>
